# PGVector-is-all-you-need-RAG

./: .gitignore  .pdm-python  docker-compose.yml  pyproject.toml  timescale_vector_hybrid_search.py  timescale_vector_search.py
src/: models.py  settings.py  synthesizer.py  utils.py  vector_store.py  vectorizer.py
src/timescale_vector/: client.py
